Fixed the z-index of background

--- a/signup/signup.css
+++ b/signup/signup.css
@@ -23,7 +23,7 @@ body, html {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: -1; /* Keeps the background behind your content */
+    z-index: 1; /* Keeps the background behind your content */
     overflow: hidden;
 }
 
